tests/matrices/invalid/invalid_dimensions_out_of_range_3.mtx
%%MatrixMarket matrix coordinate real general
% Negative nnz
3 3 -3
1 1 1
2 2 1
3 3 1
